Add Prettier as a dep

--- a/package.json
+++ b/package.json
@@ -65,5 +65,8 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "test": "echo \"Write tests! -> https://gatsby.app/unit-testing\""
+  },
+  "devDependencies": {
+    "prettier": "1.17.1"
   }
 }
