Update package.json repo details

--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "gatsby-starter-blog",
+  "name": "climatechoice.co",
   "private": true,
-  "description": "A starter for a blog powered by Gatsby and Markdown",
+  "description": "A Gatsby site to help inform people on their choices to help mitigate the harmful effects of climate change.",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
+    "url": "https://github.com/shylands/climatechoice/issues"
   },
   "dependencies": {
     "@emotion/core": "^10.0.7",
@@ -49,7 +48,7 @@
     "typography": "^0.16.18",
     "typography-theme-wordpress-2016": "^0.16.18"
   },
-  "homepage": "https://github.com/gatsbyjs/gatsby-starter-blog#readme",
+  "homepage": "https://github.com/shylands/climatechoice#readme",
   "keywords": [
     "gatsby"
   ],
@@ -57,7 +56,7 @@
   "main": "n/a",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/gatsbyjs/gatsby-starter-blog.git"
+    "url": "git+https://github.com/shylands/climatechoice.git"
   },
   "scripts": {
     "build": "gatsby build",
