--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gatsby-plugin-sass": "^2.0.10",
     "gatsby-plugin-scroll-indicator": "^0.1.0",
     "gatsby-plugin-sharp": "^2.0.35",
+    "gatsby-plugin-sitemap": "^2.1.0",
     "gatsby-remark-copy-linked-files": "^2.0.9",
     "gatsby-remark-images": "^2.0.6",
     "gatsby-remark-prismjs": "^3.2.4",
