--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "gatsby-remark-prismjs": "^3.2.4",
     "gatsby-remark-responsive-iframe": "^2.0.9",
     "gatsby-remark-smartypants": "^2.0.8",
+    "gatsby-remark-social-cards": "^0.4.1",
     "gatsby-source-filesystem": "^2.0.32",
     "gatsby-transformer-remark": "^2.2.5",
     "gatsby-transformer-sharp": "^2.1.14",
