--- a/package.json
+++ b/package.json
@@ -61,15 +61,20 @@
   },
   "scripts": {
     "build": "gatsby build",
+    "lint": "standard src",
     "develop": "gatsby develop",
     "start": "npm run develop",
     "serve": "gatsby serve",
     "test": "echo \"Write tests! -> https://gatsby.app/unit-testing\""
   },
   "devDependencies": {
+    "eslint": "^5.16.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-standard": "^4.0.0",
     "husky": "^2.3.0",
     "prettier": "1.17.1",
-    "pretty-quick": "^1.10.0"
+    "pretty-quick": "^1.10.0",
+    "standard": "^12.0.1"
   },
   "husky": {
     "hooks": {
