--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "netlify-cms": "^2.9.1",
     "node-sass": "^4.12.0",
     "prismjs": "^1.15.0",
+    "querystringify": "^2.0.0",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
     "react-helmet": "^5.2.0",
