Made share link scroll smoothly.
- uses `react-scroll` npm module, which imports `lodash.throttle`
- after click, icon disappears and won't come back
  - because you've already clicked it and now you know there's
    a share section on the page you can scroll to
  - it will come back on other pages
- I changed the `ShareSocialCta` markup so that we scroll to the
  top of the section, not the top of the earth icon, because
  it looks better to have white space at the top of the window
  - I believe `aria-label` works on `section` elements as well
    as anchors, but I am not an accessibility expert

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
     "react-helmet": "^5.2.0",
+    "react-scroll": "^1.7.12",
     "react-share": "^2.4.0",
     "react-typist": "^2.0.5",
     "react-typist-loop": "^0.0.5",
