Add eslint a11y plugin to pre-commit git hook

--- a/package.json
+++ b/package.json
@@ -95,7 +95,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "pretty-quick --staged"
+      "pre-commit": "pretty-quick --staged && eslint src"
     }
   }
 }
